--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <!-- endbower -->
     <!-- build:css css/main.min.css -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <!-- endbuild -->
 </head>
 
