--- a/app/index.html
+++ b/app/index.html
@@ -16,143 +16,176 @@
 </head>
 
 <body>
-<div class="signline"></div>
-  <nav class="uppeNavigation" role="navigation">
-    <div class="nav-wrapper container">
-       <a id="logo" href="#" class="brand-logo logotype">web
-        <span class="mid">4</span>evo
-       </a>    
-       <ul class="right hide-on-med-and-down">
-           <li><a href="#">About</a></li>
-           <li><a href="#">Services</a></li>
-           <li><a href="#">Work</a></li>
-           <li><a href="#">Blog</a></li>
-           <li><a href="#">Contact</a></li>
-        </ul>
-        <ul id="nav-mobile" class="side-nav">
-           <li>
-            <a href="#">Menu</a>
-           </li>
-        </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse">
-           <i class="material-icons">menu</i>
-        </a>
+    <div class="styleline"></div>
+      <nav class="uppeNavigation" role="navigation">
+        <div class="nav-wrapper container">
+           <a id="logo" href="#" class="brand-logo logotype">web<span class="mid">4</span>evo
+           </a>    
+           <ul class="right hide-on-med-and-down">
+               <li><a href="#">About</a></li>
+               <li><a href="#">Services</a></li>
+               <li><a href="#">Work</a></li>
+               <li><a href="#">Blog</a></li>
+               <li><a href="#">Contact</a></li>
+            </ul>
+            <ul id="nav-mobile" class="side-nav">
+               <li><a href="#">Menu</a></li>
+            </ul>
+            <a href="#" data-activates="nav-mobile" class="button-collapse">
+               <i class="material-icons">menu</i>
+            </a>
+        </div>
+      </nav>
+      
+
+      <div class="parallax-container">
+          <div class="mainSign container">
+            <h1 class="header">web<span class="mid">4</span>evo</h1>
+            <div class="signlineUpper"></div>
+            <div class="row center">
+              <h5 class="header col s12 light">web design & development
+              </h5>
+            </div>
+          </div>
+          <div class="parallax"><img src="img/background1.jpg"></div>
+          <div class="shade"></div> 
+      </div>
+
+      <div class="section white">
+        <div class="">
+          <img class="backgroundHide " src="img/background5.jpg">
+        </div>
+        <div class="midColumn row container">
+          <div class="col s12 m12 l6 offset-l6">
+            <div class="innerCard">
+              <p class="upperTextStyle">Web design & development</p>
+              <p class="visualFont">Inspired of web</p>
+              <div></div>
+              <p class="visualFont"> Focused on results</p>
+              <p class="">As a dynamic team of experts in creation strategy of web design, we implement the full set solutions for clients who require unique and sophisticated realization.</p>
+              <a class="waves-effect btn">find out more</a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="img/background2.jpg"></div>
+        <div class="shade"></div>
+      </div>
+
+      <div class="section midColumn">
+         <div class="row container">
+          <div class="col s12 m8 offset-m2 l4">
+          <img class="logo" src="img/logo-1.png">
+            <p>Our services</p>
+            <p class="visualFont">Strategy</p>
+            <div></div>
+            <p>For maximum effect, we focus on the industry in which the business is involved for that to conduct the necessary analysis in a competitive environment and applying innovative, fresh and bold ideas for the development of the client's business.</p>
+          </div>
+          <div class="col s12 m8 offset-m2 l4">
+            <img class="logo" src="img/logo-2.png">
+            <p>Our services</p>
+            <p class="visualFont">Web design</p>
+            <div></div>
+            <p>We focus on the main principles of effective web design - approaches which lead to more complicated design decisions and simplify the process of receiving presented information.</p>
+          </div>
+          <div class="col s12 m8 offset-m2 l4">
+            <div id="middleCard">
+              <img class="logo" src="img/logo-3.png">
+              <p>Our services</p>
+              <p class="visualFont">Development</p>
+              <div></div>
+              <p>Web development is the enables website functionality, per the client's requirements. Web development ranges from creating plain text pages to complex Web-based applications. We provide smart principles of effective web development.<p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="img/background3.jpg"></div>
+        <div class="shade"></div>
+      </div>
+
+      <div class="section white">
+        <div>
+         <img class="backgroundHide" src="img/background4.jpg">
+        </div>
+        <div class="midColumn row container">
+          <div class="col s12 m12 l6 offset-l6">
+            <p>Approach</p>
+            <p class="visualFont">Achieve results with</p>
+            <div></div>
+            <div class="row container"> 
+              <div class="progs col s3">
+                <img src="img/01-html.jpg">
+              </div>
+               <div class="progs col s3">
+                <img src="img/02-js.jpg">
+              </div>
+              <div class="progs col s3">
+                <img class="progs" src="img/03-css.jpg">
+              </div>
+              <div class="progs col s3">
+                <img src="img/04-angular.jpg">
+              </div>
+          </div>
+          <div class="row container">
+              <div class="progs col s3">
+                <img src="img/05-jquery.jpg">
+              </div>
+               <div class="progs col s3 ">
+                <img src="img/06-bootstrap.jpg">
+              </div>
+              <div class="progs col s3">
+                <img src="img/07-php.jpg">
+              </div>
+              <div class="progs col s3">
+                <img src="img/08-github.jpg">
+              </div>
+          </div>
+        </div>
+
+          </div>
+        </div>
+      </div>
+
+     <div class="footerUp">
+         <div class="row container">
+           <div class="col s4 m4 l2">
+             <p>CONNECT</p>
+             <p>contact us</p>
+           </div>
+           <div class="col s4 m4 l2">
+             <p>Telephone</p>
+             <p>+380501234567</p>
+           </div>
+           <div class="col s4 m4 l2">
+             <p>Adress</p>
+             <p>Kyiv</p>
+           </div>
+           <div class="col s4 m4 l2">
+             <p>Facebook</p>
+             <p>let's be friends</p>
+           </div>
+           <div class="col s4 m4 l2">
+             <p>Twitter</p>
+             <p>let's be friends</p>
+           </div>
+            <div class="col s4 m4 l2">
+             <p>LINKEDIN</p>
+             <p>let's be friends</p>
+            </div>
+          </div>
     </div>
-  </nav>
-
-
-  <div class="parallax-container">
-    <div class="container">
-      <h1 class="header center">web4evo</h1>
-      <div class="row center ">
-        <h5 class="header col s12 light">Web design and development
-        </h5>
-      </div>
-      <div class="row center">
-        <a href="" id="button" class="btn waves-effect red">More info</a>
-      </div>
-    </div>
-    <div class="parallax"><img src="img/background1.jpg"></div>
-    <div class="shade"></div> 
-  </div>
-
-
-  <div class="section white">
-    <div class="">
-      <img class="backgroundImg " src="img/background5.jpg">
-    </div>
-    <div class="row container">
-      <div class=" col s8 offset-s4">
-        <p class="">Web design & development</p>
-        <p>INSPIRED by the aesthetics Focused on results</p>
-        <p class="">As a dynamic team of experts in creation strategy of web design, we implement the full set solutions for clients who require unique and sophisticated realization.</p>
-        <a class="waves-effect waves-light btn">button</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="parallax-container">
-    <div class="parallax"><img src="img/background2.jpg"></div>
-    <div class="shade"></div>
-  </div>
-
-
-  <div class="section white">
-     <div class="row container">
-      <div class="col s12 m4">
-        <p>Our services</p>
-        <p>Strategy</p>
-        <p>For maximum effect, we focus on the industry in which the business is involved for that to conduct the necessary analysis in a competitive environment and applying innovative, fresh and bold ideas for the development of the client's business.</p>
-      </div>
-      <div class="col s12 m4">
-        <p>Our services</p>
-        <p>Web design</p>
-        <p>We focus on the main principles of effective web design - approaches which lead to more complicated design decisions and simplify the process of receiving presented information.</p>
-      </div>
-      <div class="col s12 m4">
-          <p>Our services</p>
-          <p>Development</p>
-          <p>Web development is the enables website functionality, per the client's requirements. Web development ranges from creating plain text pages to complex Web-based applications. We provide smart principles of effective web development.<p>
-      </div>
-    </div>
-  </div>
-
-  <div class="parallax-container">
-    <div class="parallax"><img src="img/background3.jpg"></div>
-    <div class="shade"></div>
-  </div>
-
-  <div class="section white">
-    <div class="">
-     <img class="backgroundImg" src="img/background4.jpg">
-    </div>
-    <div class="row container">
-      <div class=" col s8 offset-s4">
-        <p class="">Web design & development</p>
-        <p>Drop us a line</p>
-        <p class=""> If you’re considering our services, feel free to contact us below. We promise to reply within a few hours.
-        </p>
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-      </div>
-    </div>
-  </div>
-
- <<div class="footerUp">
-     <div class="row container">
-       <div class="col s6 m4 l2">
-         <p>CONNECT</p>
-         <p>contact us</p>
-       </div>
-       <div class="col s6 m4 l2">
-         <p>Telephone</p>
-         <p>+38050000000</p>
-       </div>
-       <div class="col s6 m4 l2">
-         <p>FACEBOOK</p>
-         <p>let's be friends</p>
-       </div>
-       <div class="col s6 m4 l2">
-         <p>LINKEDIN</p>
-         <p>let's be friends</p>
-       </div>
-       <div class="col s6 m4 l2">
-         <p>LINKEDIN</p>
-         <p>let's be friends</p>
-       </div>
-       <div class="col s6 m4 l2">
-         <p>LINKEDIN</p>
-         <p>let's be friends</p>
-       </div>
-      </div>
-</div>
 
     <div class="copyright">
       <div class="container">
         <p>©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
       </div>
     </div>
-
-    <div class="signline"></div>
+    <div class="styleline"></div>
 
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
