border and curtain

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-    <div class="styleline"></div>
       <nav class="uppeNavigation" role="navigation">
         <div class="nav-wrapper container">
            <a id="logo" href="#" class="brand-logo logotype">web<span class="mid">4</span>evo
@@ -37,8 +36,7 @@
         </div>
       </nav>
       
-
-      <div class="parallax-container">
+      <div class="parallax-container shade">
           <div class="mainSign container">
             <h1 class="header">web<span class="mid">4</span>evo</h1>
             <div class="signlineUpper"></div>
@@ -48,7 +46,7 @@
             </div>
           </div>
           <div class="parallax"><img src="img/background1.jpg"></div>
-          <div class="shade"></div> 
+
       </div>
 
       <div class="section white">
@@ -70,9 +68,8 @@
         </div>
       </div>
 
-      <div class="parallax-container">
+      <div class="parallax-container shade">
         <div class="parallax"><img src="img/background2.jpg"></div>
-        <div class="shade"></div>
       </div>
 
       <div class="section midColumn">
@@ -103,10 +100,9 @@
         </div>
       </div>
 
-      <div class="parallax-container">
+      <div class="parallax-container shade">
         <div class="parallax"><img src="img/background3.jpg"></div>
-        <div class="shade"></div>
-      </div>
+        <div class="shade"></div>      </div>
 
       <div class="section white">
         <div>
@@ -154,8 +150,8 @@
      <div class="footerUp">
          <div class="row container">
            <div class="col s4 m4 l2">
-             <p>CONNECT</p>
-             <p>contact us</p>
+             <p>Connect</p>
+             <p>Contact us</p>
            </div>
            <div class="col s4 m4 l2">
              <p>Telephone</p>
@@ -163,29 +159,28 @@
            </div>
            <div class="col s4 m4 l2">
              <p>Adress</p>
-             <p>Kyiv</p>
+             <p>Kyiv, Ukraine</p>
            </div>
            <div class="col s4 m4 l2">
              <p>Facebook</p>
-             <p>let's be friends</p>
+             <p>Let's be friends</p>
            </div>
            <div class="col s4 m4 l2">
              <p>Twitter</p>
-             <p>let's be friends</p>
+             <p>Let's be friends</p>
            </div>
             <div class="col s4 m4 l2">
-             <p>LINKEDIN</p>
-             <p>let's be friends</p>
+             <p>LinkedIn</p>
+             <p>Let's be friends</p>
             </div>
           </div>
     </div>
 
     <div class="copyright">
       <div class="container">
-        <p>©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
+       <p>Kyiv, Ukraine. ©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
       </div>
     </div>
-    <div class="styleline"></div>
 
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
