--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,26 @@
     <!-- endbower -->
     <!-- build:css css/main.min.css -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/shifting.css">   
     <link rel="stylesheet" href="css/media.css">
     <!-- endbuild -->
 </head>
 
 <body>
+
+<div class="dotted">
+  <ul class="dotted">
+  <li><a href="#section01" class="active"></a></li>
+  <li><a href="#section02"></a></li>
+  <li><a href="#section03"></a></li>
+  </ul>
+</div>
+
+<div id="section01" class="par"></div>
+<div id="section02" class="par"></div>
+<div id="section03" class="par"></div>
+
+
       <nav class="uppeNavigation" role="navigation">
         <div class="nav-wrapper container">
            <a id="logo" href="#" class="brand-logo logotype">web<span class="mid">4</span>evo
