--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
 
       <div class="parallax-container shade">
         <div class="parallax"><img src="img/background3.jpg"></div>
-        <div class="shade"></div>      </div>
+      </div>
 
       <div class="section white">
         <div>
