add SASS + refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/Materialize/bin/materialize.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- endbower -->
     <!-- build:css css/main.min.css -->
     <link rel="stylesheet" href="css/main.css">
@@ -30,11 +31,9 @@
 <div id="section02" class="par"></div>
 <div id="section03" class="par"></div>
 
-
       <nav class="uppeNavigation" role="navigation">
         <div class="nav-wrapper container">
-           <a id="logo" href="#" class="brand-logo logotype">web<span class="mid">4</span>evo
-           </a>    
+           <a id="logo" href="#" class="brand-logo">web<span class="mid">4</span>evo</a>
            <ul class="right hide-on-med-and-down">
                <li><a href="#">About</a></li>
                <li><a href="#">Services</a></li>
@@ -46,12 +45,12 @@
                <li><a href="#">Menu</a></li>
             </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse">
-               <i class="material-icons">menu</i>
+               <i class="material-icons">list</i>
             </a>
         </div>
       </nav>
       
-      <div class="parallax-container shade">
+      <div class="parallax-container">
           <div class="mainSign container">
             <h1 class="header">web<span class="mid">4</span>evo</h1>
             <div class="signlineUpper"></div>
@@ -64,7 +63,7 @@
 
       </div>
 
-      <div class="section white">
+      <section class="white">
         <div class="">
           <img class="backgroundHide " src="img/background5.jpg">
         </div>
@@ -81,13 +80,13 @@
 
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="parallax-container shade">
+      <div class="parallax-container">
         <div class="parallax"><img src="img/background2.jpg"></div>
       </div>
 
-      <div class="section midColumn">
+      <section class="midColumn">
          <div class="row container">
           <div class="col s12 m8 offset-m2 l4">
           <img class="logo" src="img/logo-1.png">
@@ -113,13 +112,13 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <div class="parallax-container">
+        <div class="parallax"><img src="img/background3.jpg"></div>
       </div>
 
-      <div class="parallax-container shade">
-        <div class="parallax"><img src="img/background3.jpg"></div>
-        <div class="shade"></div>      </div>
-
-      <div class="section white">
+      <section class="white">
         <div>
          <img class="backgroundHide" src="img/background4.jpg">
         </div>
@@ -159,7 +158,7 @@
         </div>
 
           </div>
-        </div>
+        </section>
       </div>
 
      <div class="footerUp">
@@ -191,11 +190,11 @@
           </div>
     </div>
 
-    <div class="copyright">
+    <footer>
       <div class="container">
        <p>Kyiv, Ukraine. ©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
       </div>
-    </div>
+    </footer>
 
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
