--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,7 @@
                <li><a href="#">About</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">Work</a></li>
-               <li><a href="#">Blog</a></li>
-               <li><a href="#">Contact</a></li>
+               <li><a href="#bottom">Contact</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
                <li><a href="#">Menu</a></li>
@@ -58,13 +57,13 @@
               </h5>
             </div>
           </div>
-          <div class="parallax"><img src="img/background1.jpg"></div>
+          <div class="parallax"><img src="img/01.jpg"></div>
 
       </div>
 
       <section class="white">
         <div class="">
-          <img class="backgroundHide " src="img/background5.jpg">
+          <img class="backgroundHide " src="img/05.jpg">
         </div>
         <div class="midColumn row container">
           <div class="col s12 m12 l6 offset-l6">
@@ -82,7 +81,7 @@
       </section>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="img/background2.jpg"></div>
+        <div class="parallax"><img src="img/02.jpg"></div>
       </div>
 
       <section class="midColumn">
@@ -114,19 +113,19 @@
       </section>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="img/background3.jpg"></div>
+        <div class="parallax"><img src="img/03.jpg"></div>
       </div>
 
       <section class="white">
         <div>
-         <img class="backgroundHide" src="img/background4.jpg">
+         <img class="backgroundHide" src="img/04.jpg">
         </div>
         <div class="midColumn row container">
           <div class="col s12 m12 l6 offset-l6">
             <p>Approach</p>
             <p class="visualFont">Achieve results with</p>
             <div></div>
-            <div class="row container"> 
+            <!--<div class="row container"> -->
               <div class="progs col s3">
                 <img src="img/01-html.jpg">
               </div>
@@ -139,8 +138,8 @@
               <div class="progs col s3">
                 <img src="img/04-angular.jpg">
               </div>
-          </div>
-          <div class="row container">
+          <!--</div>-->
+          <!--<div class="row container">-->
               <div class="progs col s3">
                 <img src="img/05-jquery.jpg">
               </div>
@@ -153,10 +152,10 @@
               <div class="progs col s3">
                 <img src="img/08-github.jpg">
               </div>
-          </div>
+          <!--</div>-->
         </div>
 
-          </div>
+        </div>
         </section>
 
      <div class="footerUp">
@@ -190,6 +189,7 @@
 
     <footer>
       <div class="container">
+          <a name="bottom"></a>
        <p>Kyiv, Ukraine. ©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
       </div>
     </footer>
