changes of logo

--- a/app/index.html
+++ b/app/index.html
@@ -33,13 +33,10 @@
 
       <nav class="uppeNavigation" role="navigation">
         <div class="nav-wrapper container">
-           <a id="logo" href="#" class="brand-logo logotype">web<span class="mid">4</span>evo
-           </a>    
+               
            <ul class="right hide-on-med-and-down">
-               <li><a href="#section01">About</a></li>
-               <li><a href="#section02">Services</a></li>
-               <li><a href="#section03">Work</a></li>
-               <li><a href="#section04">Services</a></li>
+               <li><a id="logo" href="#" class="brand-logo logotype">web<span class="mid">4</span>evo
+           </a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
                <li><a href="#section01">About</a></li>
