--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,13 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <title>web4evo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/Materialize/bin/materialize.css">
     <!-- endbower -->
     <!-- build:css css/main.min.css -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/shifting.css">   
+    <link rel="stylesheet" href="css/shifting.css"> 
     <link rel="stylesheet" href="css/media.css">
     <!-- endbuild -->
 </head>
