--- a/app/index.html
+++ b/app/index.html
@@ -23,25 +23,13 @@
 
 <body>
 
-<div class="dotted">
-  <ul class="dotted">
-  <li><a href="#section01" class="active"></a></li>
-  <li><a href="#section02"></a></li>
-  <li><a href="#section03"></a></li>
-  </ul>
-</div>
-
-<div id="section01" class="par"></div>
-<div id="section02" class="par"></div>
-<div id="section03" class="par"></div>
-
       <nav class="uppeNavigation" role="navigation">
         <div class="nav-wrapper container">
            <a id="logo" href="#" class="brand-logo">web<span class="mid">4</span>evo</a>
            <ul class="right hide-on-med-and-down">
                <li><a href="#section01">About</a></li>
                <li><a href="#section02">Services</a></li>
-               <li><a href="#section03">Work</a></li>
+               <li><a href="#section03">Approach</a></li>
                <li><a href="#bottom">Contact</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
@@ -62,13 +50,13 @@
               </h5>
             </div>
           </div>
-          <div class="parallax"><img src="img/01.jpg"></div>
+          <div class="parallax"><img src="img2/01.jpg"></div>
 
       </div>
 
       <section class="white">
         <div class="">
-          <img class="backgroundHide " src="img/05.jpg">
+          <img class="backgroundHide " src="img2/05.jpg">
         </div>
         <div class="midColumn row container">
           <div class="col s12 m12 l6 offset-l6">
@@ -78,7 +66,7 @@
               <div></div>
               <p class="visualFont"> Focused on results</p>
               <p class="">As a dynamic team of experts in creation strategy of web design, we implement the full set solutions for clients who require unique and sophisticated realization.</p>
-              <a class="waves-effect btn">find out more</a>
+              <a href="#section03" class="waves-effect btn">find out more</a>
             </div>
 
           </div>
@@ -86,28 +74,28 @@
       </section>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="img/02.jpg"></div>
+        <div class="parallax"><img src="img2/02.jpg"></div>
       </div>
 
       <section class="midColumn">
          <div class="row container">
           <div class="col s12 m8 offset-m2 l4">
-          <img class="logo" src="img/logo-1.png">
+          <img class="logo" src="img2/logo-1.png">
             <p>Our services</p>
             <p class="visualFont">Strategy</p>
             <div></div>
             <p>For maximum effect, we focus on the industry in which the business is involved for that to conduct the necessary analysis in a competitive environment and applying innovative, fresh and bold ideas for the development of the client's business.</p>
           </div>
           <div class="col s12 m8 offset-m2 l4">
-            <img class="logo" src="img/logo-2.png">
+            <img class="logo" src="img2/logo-2.png">
             <p>Our services</p>
             <p class="visualFont">Web design</p>
             <div></div>
-            <p>We focus on the main principles of effective web design - approaches which lead to more complicated design decisions and simplify the process of receiving presented information.</p>
+            <p>We follow on the main principles of effective web design - approaches which lead to more complicated design decisions and simplify the process of receiving presented information.</p>
           </div>
           <div class="col s12 m8 offset-m2 l4">
             <div id="middleCard">
-              <img class="logo" src="img/logo-3.png">
+              <img class="logo" src="img2/logo-3.png">
               <p>Our services</p>
               <p class="visualFont">Development</p>
               <div></div>
@@ -118,12 +106,12 @@
       </section>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="img/03.jpg"></div>
+        <div class="parallax"><img src="img2/03.jpg"></div>
       </div>
 
       <section class="white">
         <div>
-         <img class="backgroundHide" src="img/04.jpg">
+         <img class="backgroundHide" src="img2/04.jpg">
         </div>
         <div class="midColumn row container">
           <div class="col s12 m12 l6 offset-l6">
@@ -133,30 +121,30 @@
               <p>With applying deliberate steps in planning of graphic design, web design and web applications, you will obtain high quality project, based on effective interaction of programs.</p>
             <!--<div class="row container">-->
               <div class="progs col s3">
-                <img src="img/01-html.jpg">
+                <img src="img2/01-html.jpg">
               </div>
                <div class="progs col s3">
-                <img src="img/02-js.jpg">
+                <img src="img2/02-js.jpg">
               </div>
               <div class="progs col s3">
-                <img class="progs" src="img/03-css.jpg">
+                <img class="progs" src="img2/03-css.jpg">
               </div>
               <div class="progs col s3">
-                <img src="img/04-angular.jpg">
+                <img src="img2/07-node.jpg">
               </div>
           <!--</div>-->
           <!--<div class="row container">-->
               <div class="progs col s3">
-                <img src="img/05-jquery.jpg">
+                <img src="img2/04-angular.jpg">
               </div>
                <div class="progs col s3 ">
-                <img src="img/06-bootstrap.jpg">
+                <img src="img2/06-bootstrap.jpg">
               </div>
               <div class="progs col s3">
-                <img src="img/07-php.jpg">
+                <img src="img2/08-github.jpg">
               </div>
               <div class="progs col s3">
-                <img src="img/08-github.jpg">
+                <img src="img2/05-jquery.jpg">
               </div>
           <!--</div>-->
         </div>
@@ -167,38 +155,53 @@
      <div class="footerUp">
          <div class="row container">
            <div class="col s4 m4 l2">
-             <p>Connect</p>
-             <p>Contact us</p>
-           </div>
-           <div class="col s4 m4 l2">
-             <p>Telephone</p>
-             <p>+380501234567</p>
+             <p>Contact</p>
+             <p>info@web4evo.com</p>
            </div>
            <div class="col s4 m4 l2">
              <p>Adress</p>
              <p>Kyiv, Ukraine</p>
            </div>
            <div class="col s4 m4 l2">
+             <p>Telephone</p>
+             <p>+380936174564</p>
+           </div>
+           <div class="col s4 m4 l2">
              <p>Facebook</p>
              <p>Welcome</p>
            </div>
            <div class="col s4 m4 l2">
-             <p>Twitter</p>
+             <p>GitHub</p>
              <p>Welcome</p>
            </div>
-            <div class="col s4 m4 l2">
+           <div class="col s4 m4 l2">
              <p>LinkedIn</p>
              <p>Welcome</p>
-            </div>
+           </div>
           </div>
     </div>
 
     <footer>
       <div class="container">
           <a name="bottom"></a>
-       <p>Kyiv, Ukraine. ©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
+       <p>©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
       </div>
     </footer>
+
+
+<div class="dotted">
+  <ul class="dotted">
+  <li><a href="#section01" class="active"></a></li>
+  <li><a href="#section02"></a></li>
+  <li><a href="#section03"></a></li>
+  <li><a href="#section04"></a></li>
+  </ul>
+</div>
+
+<div id="section01" class="par"></div>
+<div id="section02" class="par"></div>
+<div id="section03" class="par"></div>
+<div id="section04" class="par"></div>
 
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
