--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 
       <section class="white">
         <div class="">
-          <img class="backgroundHide " src="img/05.jpg">
+          <img class="backgroundHide " src="img/05.jpg" alt="web">
         </div>
         <div class="midColumn row container">
           <div class="col s12 m12 l6 offset-l6">
