--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
               </h5>
             </div>
           </div>
-          <div class="parallax"><img src="img/01.jpg"></div>
+          <div class="parallax"><img src="img/01.jpg" alt="design"></div>
 
       </div>
 
