--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,10 @@
     <title> Web4evo - web design & development</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
     <!-- build:css css/vendor.min.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/Materialize/bin/materialize.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css css/main.min.css -->
@@ -55,8 +55,8 @@
       </div>
 
       <section class="white">
-        <div class="">
-          <img class="backgroundHide " src="img/05.jpg" alt="web">
+        <div>
+          <img class="backgroundHide" src="img/05.jpg" alt="web">
         </div>
         <div class="midColumn row container">
           <div class="col s12 m12 l6 offset-l6">
@@ -110,7 +110,7 @@
       </div>
 
       <section class="white">
-        <div>
+        <div  >
          <img class="backgroundHide" src="img/04.jpg">
         </div>
         <div class="midColumn row container">
