--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Website designing company"/>
     <meta name="Description" content="Web4evo is a web development agency that offers Web Design, Graphic Design and Web Application. Our approach is unique, as a design"/>
-    <title> Web4evo - web design & development</title>
+    <title>Web4evo - web design & development</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -23,10 +23,9 @@
 </head>
 
 <body>
-
-      <nav>
+      <nav >
         <div class="nav-wrapper container">
-           <a id="logo" href="#" class="brand-logo">web<span class="mid">4</span>evo</a>
+           <a id="logo" href="#" class="brand-logo">web<span>4</span>evo</a>
             <a href="#" data-activates="mobile-nav" class="button-collapse">
                 <i class="material-icons">list</i>
             </a>
@@ -34,46 +33,45 @@
                <li><a href="#section01">About</a></li>
                <li><a href="#section02">Services</a></li>
                <li><a href="#section03">Approach</a></li>
-               <li><a href="#bottom">Contact</a></li>
+               <li><a href="#section04">Contact</a></li>
             </ul>
             <ul id="mobile-nav" class="side-nav">
                 <li><a href="#section01">About</a></li>
                 <li><a href="#section02">Services</a></li>
                 <li><a href="#section03">Approach</a></li>
-                <li><a href="#bottom" class="waves-light btn">Contact</a></li>
+                <li><a href="#section04">Contact</a></li>
             </ul>
         </div>
       </nav>
       
-      <div class="parallax-container">
+      <div class="parallax-container" >
           <div class="mainSign container">
-            <h1 class="header">web<span class="mid">D</span>esign</h1>
-            <div class="signlineUpper"></div>
+            <h1>Web<span class="mid">D</span>esign</h1>
+            <div class="signline"></div>
             <div class="row center">
-              <h5 class="header col s12 light">DEVELOPMENT
-              </h5>
+              <h5 class="col s12 light">full stack of a development</h5>
             </div>
           </div>
-          <div class="parallax"><img src="img/01.jpg" alt="design"></div>
-
+          <div class="parallax">
+              <img src="img/01.jpg" alt="design">
+          </div>
       </div>
 
-      <section class="white">
+      <section>
         <div>
-          <img class="backgroundHide" src="img/05.jpg" alt="web">
+          <img class="extra" src="img/05.jpg" alt="web">
         </div>
         <div class="midColumn row container">
-          <div class="col s12 m12 l6 offset-l6">
-            <div class="innerCard">
-              <p class="upperTextStyle">Web design & development</p>
-              <p class="visualFont">Inspired of web</p>
+          <div class="innerCard col s12 m6 offset-m6 l6 offset-l6">
+              <p>Web design & development</p>
+              <p>Inspired of web</p>
               <div></div>
-              <p class="visualFont"> Focused on results</p>
-              <p class="">As a dynamic team of experts in creation strategy of web design, we implement the full set solutions for clients who require unique and sophisticated realization.</p>
+              <p>Focused on results</p>
+              <p>As a dynamic team of experts in creation strategy of web design,
+                  we implement the full set solutions for clients who require unique and sophisticated realization.
+              </p>
               <a href="#section03" class="waves-effect btn">find out more</a>
             </div>
-
-          </div>
         </div>
       </section>
 
@@ -81,27 +79,26 @@
         <div class="parallax"><img src="img/02.jpg" alt="bg"></div>
       </div>
 
-      <section class="midColumn">
-         <div class="row container">
-          <div class="col s12 m8 offset-m2 l4">
+      <section>
+         <div class="midColumn row container">
+          <div class="middleCards col s12 m4 l4">
           <img class="logo" src="img/logo-1.png">
             <p>Our services</p>
-            <p class="visualFont">Strategy</p>
+            <p>Strategy</p>
             <div></div>
             <p>For maximum effect, we focus on the industry in which the business is involved for that to conduct the necessary analysis in a competitive environment and applying innovative, fresh and bold ideas for the development of the client's business.</p>
           </div>
-          <div class="col s12 m8 offset-m2 l4">
+          <div class="middleCards col s12 m4 l4">
             <img class="logo" src="img/logo-2.png">
             <p>Our services</p>
-            <p class="visualFont">Web design</p>
+            <p>Web design</p>
             <div></div>
             <p>We follow on the main principles of effective web design - approaches which lead to more complicated design decisions and simplify the process of receiving presented information.</p>
           </div>
-          <div class="col s12 m8 offset-m2 l4">
-            <div id="middleCard">
+          <div class="middleCards col s12 m4 l4">
               <img class="logo" src="img/logo-3.png">
               <p>Our services</p>
-              <p class="visualFont">Development</p>
+              <p>Development</p>
               <div></div>
               <p>Web development is the enables website functionality, per the client's requirements. Web development ranges from creating plain text pages to complex Web-based applications. We provide smart principles of effective web development.<p>
             </div>
@@ -114,16 +111,19 @@
       </div>
 
       <section class="white">
-        <div  >
-         <img class="backgroundHide" src="img/04.jpg">
+        <div>
+         <img class="extra" src="img/04.jpg">
         </div>
         <div class="midColumn row container">
-          <div class="col s12 m12 l6 offset-l6">
-            <p>Approach</p>
-            <p class="visualFont">Achieve results with</p>
-            <div></div>
-              <p>With applying deliberate steps in planning of graphic design, web design and web applications, you will obtain high quality project, based on effective interaction of programs.</p>
-            <!--<div class="row container">-->
+          <div class="col s12 m5 offset-m7 l6 offset-l6">
+              <div class="innerCard">
+                 <p>Approach</p>
+                 <p>Achieve results with</p>
+                 <div></div>
+                 <p>Full stack</p>
+                 <p>Applying deliberate steps in planning of graphic design, web design and web applications,
+                  you will obtain high quality project, based on effective interaction of programs.</p>
+              </div>
               <div class="progs col s3">
                 <img src="img/01-html.jpg">
               </div>
@@ -136,8 +136,7 @@
               <div class="progs col s3">
                 <img src="img/07-node.jpg">
               </div>
-          <!--</div>-->
-          <!--<div class="row container">-->
+
               <div class="progs col s3">
                 <img src="img/04-angular.jpg">
               </div>
@@ -150,7 +149,6 @@
               <div class="progs col s3">
                 <img src="img/05-jquery.jpg">
               </div>
-          <!--</div>-->
         </div>
 
         </div>
@@ -158,41 +156,40 @@
 
      <div class="footerUp">
          <div class="row container">
-           <div class="col s4 m4 l2">
+           <div class="col s6 m4 l2">
              <p>Contact</p>
              <p>info@web4evo.com</p>
            </div>
-           <div class="col s4 m4 l2">
+           <div class="col s6 m4 l2">
              <p>Adress</p>
              <p>Kyiv, Ukraine</p>
            </div>
-           <div class="col s4 m4 l2">
+           <div class="col s6 m4 l2">
              <p>Telephone</p>
-             <p>+380936174564</p>
+             <p>+38 093 6174564</p>
            </div>
-           <div class="col s4 m4 l2">
+           <div class="col s6 m4 l2">
              <p>Facebook</p>
-             <p>Welcome</p>
+             <a href="//facebook.com" target="_blank">Welcome</a>
            </div>
-           <div class="col s4 m4 l2">
+           <div class="col s6 m4 l2">
              <p>GitHub</p>
-             <p>Welcome</p>
+             <a href="//github.com/Vladis-K" target="_blank">Welcome</a>
            </div>
-           <div class="col s4 m4 l2">
+           <div class="col s6 m4 l2">
              <p>LinkedIn</p>
-             <p>Welcome</p>
+             <a href="//www.linkedin.com/in/vladisk" target="_blank">Welcome</a>
            </div>
           </div>
     </div>
 
     <footer>
       <div class="container">
-          <a name="bottom"></a>
-       <p>©2016 web<span class="mid">4</span>evo. All Rights Reserved </p>
+       <p>© 2016  All Rights Reserved. Web<span class="mid">4</span>evo.</p>
       </div>
     </footer>
 
-<div class="dotted">
+<div class="dotted backgroundHide">
   <ul class="dotted">
   <li><a href="#section01" class="active"></a></li>
   <li><a href="#section02"></a></li>
